--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.4'
 
 services:
 
@@ -15,12 +15,20 @@ services:
       - '3306:3306'
     expose:
       - '3306'
+    volumes:
+      - volumen-db:/var/lib/mysql
+    network_mode: host
 
   app:
     image: pizza-task
     build: .
     container_name: pizza-task-container
-    command: /bin/bash -c "cd /app/apps/ && python3 manage.py runserver"
+    environment:
+      WAIT_HOSTS: db:3306
+      WAIT_HOSTS_TIMEOUT: 300
+      WAIT_SLEEP_INTERVAL: 30
+      WAIT_HOST_CONNECT_TIMEOUT: 30
+    command: /bin/bash -c "cd /app/apps/ && python3 manage.py migrate && python3 manage.py runserver"
     volumes:
       - .:/app
     env_file:
@@ -31,3 +39,7 @@ services:
       - "8000"
     depends_on:
       - db
+    network_mode: host
+    
+volumes:
+  volumen-db:
