--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -16,10 +16,6 @@ jobs:
         python-version: [3.6]
 
     steps:
-    - env:
-        AWS_ACCESS_KEY_ID: ALSOFAKE
-        AWS_SECRET_ACCESS_KEY: ALSOFAKE
-        PIZZA_MODEL_BUCKET: PIZZA_BUCKET
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v1
@@ -32,3 +28,7 @@ jobs:
     - name: Run Tests
       run: |
         python apps/manage.py test
+      env:
+        AWS_ACCESS_KEY_ID: ALSOFAKE
+        AWS_SECRET_ACCESS_KEY: ALSOFAKE
+        PIZZA_MODEL_BUCKET: PIZZA_BUCKET
