--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,19 @@
 asgiref==3.2.7
 boto3==1.13.0
+botocore==1.16.1
 Django==3.0.5
+django-cors-headers==3.2.1
 django-storages==1.9.1
 djangorestframework==3.11.0
+docutils==0.15.2
+gunicorn==19.6.0
+jmespath==0.9.5
 mysqlclient==1.4.6
 Pillow==7.1.2
+python-dateutil==2.8.1
 python-decouple==3.3
 pytz==2019.3
+s3transfer==0.3.3
+six==1.14.0
 sqlparse==0.3.1
-django-cors-headers==3.2.1
+urllib3==1.25.9
